--- a/H5/app/src/main/AndroidManifest.xml
+++ b/H5/app/src/main/AndroidManifest.xml
@@ -5,10 +5,11 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="中外诗歌经典"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:usesCleartextTraffic="true">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Aty1"></activity>
+        <activity android:name=".Ayt2"></activity>
+        <activity android:name=".Aty3"></activity>
+        <activity android:name=".Act4"></activity>
     </application>
 
 </manifest>
